--- a/src/App.css
+++ b/src/App.css
@@ -13,6 +13,7 @@
   overflow-y: auto;
   margin-bottom: 10px;
   background: #f9f9f9;
+  color: Black;
 }
 
 .msg {
@@ -96,14 +97,5 @@ body {
 }
 
 /* Optional: Overlay for better text visibility */
-body::before {
-  content: "";
-  position: fixed;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  width: 100vw;
-  background: rgba(0, 0, 0, 0.4); /* adjust darkness */
-  z-index: -1;
-}
+
 
