--- a/src/App.css
+++ b/src/App.css
@@ -9,7 +9,7 @@
 body, html, .app {
   height: 100%;
   width: 100%;
-  background: url('/spacebg.png') no-repeat center center fixed;
+  background: url('/assets/bg.png') no-repeat center center fixed;
   background-size: cover;
   color: white;
 }
